# bbus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO_context_manager_refactor.md  TODO_event_history_stores.md  TODO_middleware.md  TODO_python.md  TODO_ts.md  pyproject.toml  test.sh  test_perf.sh
bubus/: __init__.py  base_event.py  bridge_jsonl.py  bridge_nats.py  bridge_postgres.py  bridge_redis.py  bridge_sqlite.py  bridges.py  event_bus.py  event_handler.py  event_history.py  event_result.py  events_suck.py  helpers.py  jsonschema.py  lock_manager.py  logging.py  middlewares.py  models.py  retry.py  service.py
bubus-go/: README.md  base_event.go  event_bus.go  event_handler.go  event_history.go  event_result.go  go.mod  helpers.go  lock_manager.go  uuid.go
bubus-rust/: Cargo.toml  README.md
bubus-rust/src/: base_event.rs  event_bus.rs  event_handler.rs  event_result.rs  id.rs  lib.rs  lock_manager.rs  typed.rs  types.rs
bubus-rust/tests/: event_bus_tests.rs  test_base_event.rs  test_event_handler_first.rs  test_event_handler_ids.rs  test_event_history_store.rs  test_event_result.rs  test_eventbus_dispatch_defaults.rs  test_eventbus_edge_cases.rs  test_eventbus_find.rs  test_eventbus_locking.rs  test_eventbus_on_off.rs  test_eventbus_timeout.rs  test_ids.rs  test_typed_events.rs
bubus-ts/: .prettierignore  README.md  TODOS.txt  eslint.config.js  eslint.config.mjs  package.json  playwright.perf.config.cjs  pnpm-lock.yaml  prettier.config.js  tsconfig.json  tsconfig.typecheck.json
docs/: docs.json  features-async-sync-handlers.mdx  features.mdx  (+14 more)
(+259 files in other folders)
