[package]
name = "bubus-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
futures = { version = "0.3", features = ["executor", "thread-pool"] }
event-listener = "5"
parking_lot = "0.12"

[[bin]]
name = "roundtrip_events"
path = "src/bin/roundtrip_events.rs"

[dev-dependencies]
